# MeshSubdivider

./: .gitignore  License.txt  MeshSubdivider.sln  README.md
COMPILED/LINUX/Dependencies/: libosdCPU.so.3.6.0  libosdGPU.so.3.6.0
COMPILED/MAC/15.1v5/: MeshSubdivider.dylib
COMPILED/MAC/16.0v1/: MeshSubdivider.dylib
Plugin/: CMakeLists.txt  MeshSubdivider.cpp  MeshSubdivider.vcxproj  MeshSubdivider.vcxproj.filters  Subdivider.cpp  Subdivider.h
